Add JVM args to test to allow modifying env var map.