@@ -47,6 +47,10 @@ tasks.register("printVersion") {
 
 test {
     useJUnitPlatform()
+    jvmArgs([
+            "--add-opens java.base/java.util=ALL-UNNAMED",
+            "--add-opens java.base/java.lang=ALL-UNNAMED"
+    ])
     finalizedBy jacocoTestReport
 }
 
